  value is outside of the current bounds
- new methods SCIPgetGlobalCutpool(), SCIPgetPoolCuts(), SCIPcutpoolGetCuts(), SCIPcutGetRow(), and SCIPcutGetAge()
- slightly changed semantics of SCIPaddConsNode() and SCIPaddConsLocal(), such that a constraint which is added to the
  root node now enters the global problem (and is still existing after a restart)

plugins:
- new primal heuristic "rens"
- new primal heuristic "mutation"
- slightly modified crossover and rins heuristics
- improved presolving of and, or, and xor constraints
- improved performance of intdiving heuristic
- new primal heuristic "veclendiving"
- improved heuristic "octane"
- improved heuristic "shifting"
- slightly modified rens and localbranching heuristics
- modified guided diving heuristic such that it equals the original version of the heuristic (i.e., round in direction
  of the current incumbent solution instead of the average of all primal feasible solutions)
- modified c-MIR cut separator to more closely resemble the original version of Marchand and Wolsey
- implemented additional dual presolving in linear constraint handler
- slightly modified presolving of varbound constraint handler
- c-MIR cuts try now to scale the cut to integral values; however, cuts are still generated if this fails

parameters:
- new parameter "reading/zplreader/changedir" to control behavior of path switching of ZIMPL file reader
- new parameter "reading/zplreader/parameters" to pass additional parameters to ZIMPL
- new parameter "propagating/abortoncutoff"
- changed default value of "heuristics/octane/usediffray" to FALSE
- new parameter "heuristics/octane/useavgwgtray"
- removed parameter "heuristics/octane/usediffbwray"
- renamed parameter "heuristics/octane/useavgray" to "heuristics/octane/useavgnbray"
- new parameter "heuristics/octane/useavgray"
- changed default value of "heuristics/rens/binarybounds" to TRUE
- changed default value of "heuristics/octane/freq" to -1 in order to deactivate Octane