@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: ConshdlrSubtour.cpp,v 1.8 2006/06/14 17:54:07 bzfpfend Exp $"
+#pragma ident "@(#) $Id: ConshdlrSubtour.cpp,v 1.9 2006/08/30 09:46:04 bzfpfend Exp $"
 
 /**@file   ConshdlrSubtour.cpp
  * @brief  C++ file reader for TSP data files
@@ -381,6 +381,7 @@ SCIP_RETCODE ConshdlrSubtour::scip_enfolp(
    SCIP_CONS**        conss,              /**< array of constraints to process */
    int                nconss,             /**< number of constraints to process */
    int                nusefulconss,       /**< number of useful (non-obsolete) constraints to process */
+   SCIP_Bool          solinfeasible,      /**< was the solution already declared infeasible by a constraint handler? */
    SCIP_RESULT*       result              /**< pointer to store the result of the enforcing call */
    )
 {
@@ -480,6 +481,7 @@ SCIP_RETCODE ConshdlrSubtour::scip_enfops(
    SCIP_CONS**        conss,              /**< array of constraints to process */
    int                nconss,             /**< number of constraints to process */
    int                nusefulconss,       /**< number of useful (non-obsolete) constraints to process */
+   SCIP_Bool          solinfeasible,      /**< was the solution already declared infeasible by a constraint handler? */
    SCIP_Bool          objinfeasible,      /**< is the solution infeasible anyway due to violating lower objective bound? */
    SCIP_RESULT*       result              /**< pointer to store the result of the enforcing call */
    )
